# RangeArmor

./: .gitignore  LICENSE  README.md  build.py  export_presets.cfg  project.godot
Test/a/Test/launcher/: config.json  launcher.py
addons/emojis-for-godot/EmojiPanel/: EmojiGrid.tscn
build_files/examples/: Example Game.range
build_files/release/data/: Example Game.rasec
build_files/release/scripts/: get_rangeengine_currentplatform.py
godot/: export_presets.cfg
godot/addons/emojis-for-godot/emojis/: emojis.json
godot/scenes/: editor.gd  editor.tscn  welcome.gd  welcome.tscn
godot/textures/: rangearmor_logo_name.png.import
godot/textures/icons/: windows-and-linux-logo.png.import
launcher/python/: launcher.py
launcher/python/scripts/: minify_launcher.py
launcher/rust/: Cargo.toml  build.rs
launcher/rust/src/: main.rs
release/data/: Example Game.range  Example Game.rasec
release/scripts/: build_release.py  get_rangeengine_currentplatform.py
scenes/: editor.gd  editor.tscn  welcome.gd  welcome.tscn
scripts/: globals.gd
source/: launcher.py
source/launcher/: Cargo.toml  build.rs
source/launcher/src/: main.rs
textures/: bgarmor_logo_name.psd  rangearmor_icon.png.import  rangearmor_logo.png.import
textures/icons/: linux-logo.png.import  windows-and-inux-logo.png.import  windows-logo.png.import
