[package]
name = "rangearmor"
version = "1.4.0"
edition = "2018"
build = "build.rs"

[dependencies]
clap = "2.33.3"
subprocess = "0.2.8"
json = "0.12.4"
winapi = {version = "0.3.9", features = ["wincon", "winuser"]}
winapi-i686-pc-windows-gnu = "0.4.0"
rustls = "0.21.2"

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
FileDescription = "RangeArmor: Game packer and launcher."
ProductName = "RangeArmor"
OriginalFilename = "RangeArmor.exe"
LegalCopyright = "MIT"
CompanyName = "RangeEngine"
